# GameOfLife

./: .gitignore  CMakeLists.txt  Readme.md  clang_compiler  gcc_compiler
include/: GameOfLifeLogic.h  GameOfLifeLogic.hpp  GameOfLifeRenderer.hpp  RleReader.hpp  shader.h  shader.hpp
shaders/: GridFragmentShader.fs  vertexShader.vs
source/: GameOfLifeLogic.cpp  GameOfLifeRenderer.cpp  RleReader.cpp  main.cpp  shader.cpp
source/shaders/: BoxFragmentShader.fs
